# sparse_coding

./: .gitignore  LICENSE  README.md
python/: img_preprocessing.py  optim.py  sparse_coding.py
report/: biblio.bib  report.tex
src/: CMakeLists.txt  main.cpp  sparse_coding.cpp  sparse_coding.h
